# NeverOT

./: .dockerignore  .env.example  .env.flex.template  .gitignore  CONTRACT_VERSIONING_SUMMARY.md  Dockerfile  FINAL_FIVE_STAR_SUMMARY.md  G3E2_COMPLETE_SUMMARY.md  PRESENTATION_OTbot_Architecture.md  README.md  RL_COMPLETE_SUMMARY.md  RL_STRATEGY_SELECTOR_SUMMARY.md  SCREEN_RECORDING_GUIDE.md  auto_record_complete.sh  auto_record_demo.sh  auto_record_instant.sh  auto_record_quicktime.py  auto_record_simple.sh  demo_frontend_auto.py  demo_frontend_simple.py  demo_frontend_ui.py  demo_her_optimization.py  demo_her_with_tracking.py  docker-compose.yml  next.md  plan.md  pyproject.toml  real-test.md  start_browser_recording.py  trigger_demo_ui.py
agent/: AGENTS.md  (+3 more)
recovery-agent/: .gitignore  AGENT_DOCUMENTATION.md  AGENT_OVERVIEW.md  Dockerfile  README.md  lab_config.example.json  merge_plan.md  next_plan.md  plan.md  pyproject.toml  requirements.txt  workflow_config.example.json
recovery-agent/config/: playbook.yaml  safety.yaml  signature.yaml  tests.yaml
recovery-agent/demo/: NARRATIVE_DEMO_NARRATION.md  README.md  SENSING_DEMO_README.md  TEST_DEMO_NARRATION.md  generate_sensing_videos.sh  record_demo.sh  record_sensing_demo.sh  run_demo.sh  run_sensing_demo.py  run_sensing_demo.sh  run_test_demo.sh
recovery-agent/demo/recordings/: exp-agent-demo.cast  exp-agent-narrative-demo.cast  exp-agent-test-demo.cast  sensing-demo-1.cast  sensing-demo-2.cast  sensing-demo-3.cast  sensing-demo-4.cast  sensing-demo-all.cast
recovery-agent/docs/: capabilities.md  capabilities.yaml  dashboard_demo_script.md  decision_table.yaml  hazards.yaml  moltbot_insights.md  policy.md
recovery-agent/docs/scenarios/: README.md  overshoot.md  sensor_fail.md  template.md  timeout.md
recovery-agent/presentation/: Recovery_Aware_Agent_Presentation.pptx  case_study_pipeline.md  create_pptx.js  package-lock.json  package.json
recovery-agent/presentation/sensing_demo/: demo1_blind_vs_sensing.html
recovery-agent/presentation/slides/: slide01.html  slide02.html  slide03.html  slide04.html  slide05.html  slide06.html  slide07.html  slide08.html  slide09.html  slide10.html  slide11.html  slide12.html  slide12_pipeline.html  slide13.html  slide14.html  slide15.html
recovery-agent/rust/: Cargo.toml  pyproject.toml
recovery-agent/rust/src/: device.rs  lib.rs  telemetry.rs  types.rs
recovery-agent/src/exp_agent/cli/: dashboard.py  run_agent.py  run_disaster_recovery_demo.py  run_instrumented.py  run_multi_device_demo.py  run_narrative_demo.py  run_sim.py  run_workflow.py  run_workflow_demo.py
recovery-agent/src/exp_agent/core/: predicates.py  safety_types.py  types.py
recovery-agent/src/exp_agent/devices/: base.py  factory.py
recovery-agent/src/exp_agent/executor/: guarded_executor.py  post_check.py
recovery-agent/src/exp_agent/llm/: __init__.py  advisor.py  null_advisor.py  stub_advisor.py  types.py
recovery-agent/src/exp_agent/logging/: __init__.py  anomaly.py  pipeline.py
recovery-agent/src/exp_agent/orchestrator/: instrumented_supervisor.py  supervisor.py  workflow_manager.py  workflow_supervisor.py
recovery-agent/src/exp_agent/recovery/: classifier.py  policy.py  recovery_agent.py  workflow_policy.py
recovery-agent/src/exp_agent/safety/: __init__.py  agent.py  checker.py  mock_agent.py
recovery-agent/src/exp_agent/sensing/: __init__.py  integration.py  recovery_gate.py  safety_advisor.py  safety_state.py
recovery-agent/src/exp_agent/web/: __init__.py  app.py
recovery-agent/tests/: test_devices.py  test_guardrails.py  test_llm_advisor_plumbing.py  test_policy.py  test_recovery.py  test_safety_integration.py  test_safety_runtime.py  test_sensing.py  test_workflow_supervisor.py
(+379 files in other folders)
