[project]
name = "lab-orchestrator-mvp"
version = "0.1.0"
description = "MVP laboratory orchestrator with persistent state, trigger routing, isolation, safety gates, locks, and audit trails"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  # Web framework
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "pyyaml>=6.0",
  "httpx>=0.27.0",
  # Numeric / RL
  "numpy>=1.24.0",
]

[project.optional-dependencies]
# Real hardware communication
hardware = [
  "pyserial>=3.5",
  "opentrons>=7.0.0",
]
# DQN / neural RL strategies
ml = [
  "torch>=2.0.0",
]
# Gradio frontend for NLP agent
frontend = [
  "gradio>=4.0.0",
]
# Demo scripts
demo = [
  "requests>=2.28.0",
]
# Development & testing
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.23.0",
  "pytest-cov>=5.0.0",
  "httpx>=0.27.0",
  "anyio>=4.0.0",
  "ruff>=0.4.0",
  "mypy>=1.10.0",
]
# Install everything
all = [
  "lab-orchestrator-mvp[hardware,ml,frontend,demo,dev]",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
